cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: leafapp
spec:
  rules:
  - host: leafapp.ga
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: projects-api-svc
            port: 
              number: 5000
